refactor: improve code quality and Java 21 compatibility
- Replace removeFirst() with remove(0) for better compatibility
- Use explicit variable names in Deck.generateAllCards()
- Organize imports in detector classes
- Remove wildcard imports for better code clarity